# FitnessTrackerBot

./: .dockerignore  Dockerfile  README.md  bot.py  docker-compose.yaml  pyproject.toml
configs/: config_reader.py
database/: engine.py  models.py  orm_query.py
filters/: profile_filter.py
handlers/: change_calories.py  common.py  menu.py  profile.py  progress_check.py  update_activity.py  update_calories.py  update_water.py
keyboards/: activity_kb.py  menu_kb.py  profile_kb.py
middlewares/: db.py  logging.py
services/: daily_stats.py  user_profile.py
utils/: city_temp.py  food.py  norms.py
