[project]
name = "fitnesstrackerbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil Yakusik",email = "dvyakusik@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (<=4.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
